syntax = "proto3";

package api.comment.service.v1;
import public "google/protobuf/timestamp.proto";
option go_package = "comment/api/comment/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.comment.service.v1";

service Comment {
	rpc GetSubject (GetSubjectRequest) returns (GetSubjectReply);
	rpc GetComment (GetCommentRequest) returns (GetCommentReply); //获取一个评论下的楼中楼，分页
	rpc ListComment (ListCommentRequest) returns (ListCommentReply); //获取一个作品下的评论，分页，楼中楼显示3条
}

message GetSubjectRequest {
	int64 obj_id = 1;
}
message GetSubjectReply {
	int64 obj_id=1;
	int64 owner_id=2;
	int32 count=3;
	int32 next_floor = 4;
	int32 state =5;
	google.protobuf.Timestamp created_at = 6;
	google.protobuf.Timestamp updated_at = 7;
}

message GetCommentRequest {
	int64 content_id=1;
}
message GetCommentReply {
	CommentObj comment=1;
	repeated CommentObj sub_comment=2;
}

message ListCommentRequest {
	int64 obj_id = 1;
	int32 page_size = 2;
	int32 page_id = 3;
	bool order_by_floor = 4;
}
message ListCommentReply {
	repeated GetCommentReply comment=1;
}

message CommentSubject {
// 	  obj_id int64 [not null]
//   owner_id int64 [not null]
//   count int32 [not null,default: 0]
//   next_floor int32 [not null, default:0]
//   state int8 [not null, default: 0]
  int64 owner_id = 2;
}

// {
//   "obj_id":1,
//   "owner_id":1,
//   "message":"hello,wzw",
//   "root":0,
//   "parent":0
// }
message CommentMessage{
	int64 obj_id = 1;
	int64 owner_id =2;
	int64 root = 3;
	int64 parent = 4;
	string message =5;
}

message CommentObj{
	int64 content_id=1;
	int64 obj_id=2;
	int64 owner_id=3;
	int64 root=4;
	int64 parent=5;
	int32 floor=6;
	int32 like =7;
	int32 hate=8;
	int32 state=9;
	string message = 10;
	google.protobuf.Timestamp created_at = 11;
}

message CommentMessageCache{
	int64 id=1;
	string message=2;
}

message CommentIndexCache{
	int64 obj_id=1;
	bool order_by_floor=2;
}